<resources>
    <string name="app_name">WorkManager</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reset_status">Reset Status</string>
    <string name="work_on_ui_thread">Work on UI Thread</string>
    <string name="work_status">Work Status</string>
    <string name="start_work">Start Work</string>
    <string name="worker_fail">Worker Fail</string>
    <string name="worker_retry">Worker Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="multiple_chain_fail">Multiple Chain Fail</string>
    <string name="multiple_chain_succeed">Multiple Chain Succeed</string>
    <string name="group_chain_fail">Group Chain Fail</string>
    <string name="group_chain_succeed">Group Chain Succeed</string>
    <string name="single_chain_fail">Single Chain Fail</string>
    <string name="single_chain_succeed">Single Chain Succeed</string>
    <string name="fragment_third">Third Fragment</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
</resources>