<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FirstFragment">

    <Button
        android:id="@+id/btnStartWork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/start_work"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnWorkStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/work_status"
        app:layout_constraintEnd_toEndOf="@+id/btnStartWork"
        app:layout_constraintStart_toStartOf="@+id/btnStartWork"
        app:layout_constraintTop_toBottomOf="@+id/btnStartWork" />


    <Button
        android:id="@+id/btnResetStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reset_status"
        app:layout_constraintEnd_toEndOf="@+id/btnWorkStatus"
        app:layout_constraintStart_toStartOf="@+id/btnWorkStatus"
        app:layout_constraintTop_toBottomOf="@+id/btnWorkStatus" />

    <Button
        android:id="@+id/btnWorkUIThread"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/work_on_ui_thread"
        app:layout_constraintEnd_toEndOf="@+id/btnResetStatus"
        app:layout_constraintStart_toStartOf="@+id/btnResetStatus"
        app:layout_constraintTop_toBottomOf="@+id/btnResetStatus" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>